[package]
name = "file_finch"
version = "0.1.0"
edition = "2024"
authors = ["Chris C"]
description = "A file format detection library supporting various data formats including Arrow, Parquet, CSV, Excel, GeoJSON, and more"
readme = "README.md"
repository = "https://github.com/yourusername/doorman"
license = "MIT"
keywords = ["file-detection", "magic-numbers"]
categories = ["data-processing"]

[dependencies]
muy_zipido = "0.1.1"
