[package]
name = "file_finch"
version = "0.1.0"
edition = "2024"
authors = ["Chris C"]
description = "A file format detection library supporting various data formats including Arrow, Parquet, CSV, Excel, GeoJSON, and more"
readme = "README.md"
repository = "https://github.com/CHRISCARLON/FileFinch"
license = "MIT"
keywords = ["file-detection", "magic-numbers"]

[dependencies]
muy_zipido = "0.1.1"
